v0.3.0/_sources/projections/cyl/cyl_miller.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/cyl/cyl_miller.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_cyl_cyl_miller.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_cyl_cyl_miller.py:


Miller cylindrical
==================

This cylindrical projection, presented by Osborn Maitland Miller of the American
Geographic Society in 1942, is neither equal nor conformal. All meridians and
parallels are straight lines. The projection was designed to be a compromise between
Mercator and other cylindrical projections. Specifically, Miller spaced the parallels
by using Mercator’s formula with 0.8 times the actual latitude, thus avoiding the
singular poles; the result was then divided by 0.8.

**j**\ [*lon0/*]\ */scale* or **J**\ [*lon0/*]\ */width*

The projection is set with **j** or **J**. The central meridian is set by the
optional *lon0*, and the figure size is set with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 17-29



.. image:: /projections/cyl/images/sphx_glr_cyl_miller_001.png
    :alt: cyl miller
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>





|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    fig.coast(
        region=[-180, 180, -80, 80],
        projection="J-65/12c",
        land="khaki",
        water="azure",
        shorelines="thinnest",
        frame="afg",
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.316 seconds)


.. _sphx_glr_download_projections_cyl_cyl_miller.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: cyl_miller.py <cyl_miller.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: cyl_miller.ipynb <cyl_miller.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
